# git-good-daisyworld

./: .clang-format  CMakeLists.txt  README.md  daisy.cpp  daisy.hpp  main.cpp  world.cpp  world.hpp
